--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "colors": "~1.1.0",
     "dox": "~0.8.0",
     "express": "~4.12.4",
-    "gulp": "~3.8.1",
+    "gulp": "^3.9.0",
     "gulp-jshint": "~1.11.0",
     "hbs": "~3.0.1",
     "http-proxy": "~1.11.1",
@@ -78,6 +78,7 @@
     "yargs": "~3.9.1"
   },
   "scripts": {
+    "gulp-test": "gulp test",
     "test": "make test",
     "test_sauce": "make test_e2e_sauce"
   }
